Refactored the formatting pane and added support for spacing options, as well as ranges for the axes Added an icon Fixed a bug when setting the background to no color crashes the visual

--- a/style/visual.less
+++ b/style/visual.less
@@ -12,10 +12,6 @@ h3 {
     flex-wrap: wrap;   
 }
 
-.innerContainer {
-    margin: 10px;
-}
-
 .noData {
     display: flex;
     justify-content: center;
